--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,12 @@
 1. check if book exists before saved 
     1a. change url to bookName only
 2. add book regex check
-3. add stoics api
+3. put all notion clients under a class
 4. delete books
 5. navbar height for mobile issue
 6. add shortcut "enter" for enter
 7. adjust word page
+8. navbar vertical scrollbar to scroll horizontally
 
  - add year YearTimer
 
