--- a/TODO.txt
+++ b/TODO.txt
@@ -1,16 +1,16 @@
--  sighpie lemon pie need to fix wordDefinitionPage back button
-1. check if book exists before saved 
-    1a. change url to bookName only
-2. add book regex check
+
+- change url to bookName only
+- add book regex check
     - probably need to composite this appropriately with other inputs...
-3. put all notion clients under a class
-4. delete books
-5. navbar height for mobile issue
-6. add shortcut "enter" for enter
-7. adjust word page
-8. navbar vertical scrollbar to scroll horizontally
+- put all notion clients under a class
+- delete books
+- navbar height for mobile issue
+- adjust word page
+- navbar vertical scrollbar to scroll horizontally
 
  - add year YearTimer
+ - sighpie lemon pie need to fix wordDefinitionPage back button1. check if book exists before saved 
+ - add shortcut "enter" for enter
 
 {
     "object": "list",
