support: book does not exists noti to render once only

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
+- new bug found, need to change book urls to not contain ids => composite pre checks before every page render.
 - add scrollbar.. including for navbar
 - next page
 - caught bug when changing tabs quickly from definition tab
