--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,4 @@
-- new bug found, need to change book urls to not contain ids => composite pre checks before every page render.
-    - change url to bookName only
+- book does not exist redirector
 - if enter book url directly while logged out, throws an error in prod
 - add scrollbar.. including for navbar
 - adjust word page
@@ -13,6 +12,8 @@ UNDER OBSERVATION
 - wordsPage re refresh on reload
 
 DONE
+- new bug found, need to change book urls to not contain ids => composite pre checks before every page render.
+    - change url to bookName only
 - wrong credentials loading on login
 - when signUpPopover loading, disallow clicking away
 - put all notion clients under a class
